--- a/User.Api/appsettings.json
+++ b/User.Api/appsettings.json
@@ -14,5 +14,16 @@
   },
   "ConnectionStrings": {
     "MysqlUser": "server=111.231.243.162;port=3306;database=beta_user;userid=a56209;password=asp.net"
+  },
+  "ServiceDiscovery": {
+    "ServiceName": "userapi",
+    "Consul": {
+      "HttpEndpoint": "http://127.0.0.1:8500",
+      "DnsEndpoint": {
+        "Address": "127.0.0.1",
+        "Port": 8600
+      }
+    }
   }
+
 }
