--- a/User.Api/User.Api.csproj
+++ b/User.Api/User.Api.csproj
@@ -6,9 +6,11 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
+    <Folder Include="Entities\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Consul" Version="0.7.2.5" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="2.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.2" />
