--- a/Contact.Api/appsettings.json
+++ b/Contact.Api/appsettings.json
@@ -12,6 +12,6 @@
       }
     }
   },
-  "MongoContactConnectionString": "mongo://localhost:27017",
+  "MongoContactConnectionString": "mongodb://111.231.243.162:27017",
   "MongoContactDatabase": "Finbook_Contacts"
 }
