--- a/Contact.Api/appsettings.json
+++ b/Contact.Api/appsettings.json
@@ -13,5 +13,15 @@
     }
   },
   "MongoContactConnectionString": "mongodb://111.231.243.162:27017",
-  "MongoContactDatabase": "Finbook_Contacts"
+  "MongoContactDatabase": "Finbook_Contacts",
+  "ServiceDiscovery": {
+    "UserServiceName": "userapi",
+    "Consul": {
+      "HttpEndpoint": "http://127.0.0.1:8500",
+      "DnsEndpoint": {
+        "Address": "127.0.0.1",
+        "Port": 8600
+      }
+    }
+  }
 }
