--- a/User.Identity/User.Identity.csproj
+++ b/User.Identity/User.Identity.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="DnsClient" Version="1.1.1" />
     <PackageReference Include="IdentityServer4" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Polly" Version="6.0.1" />
   </ItemGroup>
 
