--- a/Contact.Api/Contact.Api.csproj
+++ b/Contact.Api/Contact.Api.csproj
@@ -10,6 +10,9 @@
 
   <ItemGroup>
     <PackageReference Include="Consul" Version="0.7.2.6" />
+    <PackageReference Include="DotNetCore.CAP" Version="2.2.5" />
+    <PackageReference Include="DotNetCore.CAP.MySql" Version="2.2.5" />
+    <PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="2.2.5" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="MongoDB.Driver" Version="2.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
