--- a/User.Api/User.Api.csproj
+++ b/User.Api/User.Api.csproj
@@ -11,10 +11,13 @@
 
   <ItemGroup>
     <PackageReference Include="Consul" Version="0.7.2.5" />
+    <PackageReference Include="DotNetCore.CAP" Version="2.2.5" />
+    <PackageReference Include="DotNetCore.CAP.MySql" Version="2.2.5" />
+    <PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="2.2.5" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="2.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.2" />
-    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.11" />
+    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="6.10.7" />
   </ItemGroup>
 
   <ItemGroup>
