--- a/Contact.Api/appsettings.json
+++ b/Contact.Api/appsettings.json
@@ -15,7 +15,7 @@
   "MongoContactConnectionString": "mongodb://111.231.243.162:27017",
   "MongoContactDatabase": "Finbook_Contacts",
   "ConnectionStrings": {
-    "MysqlUser": "server=111.231.243.162;port=3306;database=beta_user;userid=a56209;password=asp.net"
+    "MysqlUser": "server=111.231.243.162;port=3306;database=beta_contact;userid=a56209;password=asp.net"
   },
   "ServiceDiscovery": {
     "UserServiceName": "userapi",
