--- a/Contact.Api/appsettings.json
+++ b/Contact.Api/appsettings.json
@@ -18,7 +18,7 @@
     "MysqlUser": "server=111.231.243.162;port=3306;database=beta_contact;userid=a56209;password=asp.net"
   },
   "ServiceDiscovery": {
-    "UserServiceName": "userapi",
+    "ServiceName": "contactapi",
     "Consul": {
       "HttpEndpoint": "http://127.0.0.1:8500",
       "DnsEndpoint": {
