--- a/Project.Api/appsettings.json
+++ b/Project.Api/appsettings.json
@@ -14,5 +14,15 @@
   },
   "ConnectionStrings": {
     "MysqlProject": "server=111.231.243.162;port=3306;database=beta_project;userid=a56209;password=asp.net"
+  },
+  "ServiceDiscovery": {
+    "ServiceName": "projectapi",
+    "Consul": {
+      "HttpEndpoint": "http://127.0.0.1:8500",
+      "DnsEndpoint": {
+        "Address": "127.0.0.1",
+        "Port": 8600
+      }
+    }
   }
 }
